--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    sourceSets {
+        androidTest.java.srcDirs += "src/test-common/java"
+        test.java.srcDirs += "src/test-common/java"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -59,11 +64,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    //Added libraries:
 
     // Room dependency
     def room_version = "2.2.5"
@@ -115,26 +115,24 @@ dependencies {
     def work_version = "2.4.0"
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
+    //Local tests:
+    testImplementation 'junit:junit:4.13'
     testImplementation 'androidx.test:rules:1.3.0'
-
-    // Mockito framework
     testImplementation 'org.mockito:mockito-core:3.3.3'
-
-    //kotlinx-coroutines-test
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.8'
-
-    //JUnit test rules that can be used with LiveData.
     testImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
 
-    /**
-     * Instrumented unit tests:
-     */
-    //JUnit test rules that can be used with LiveData.
+    //Instrumental tests:
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
-
-    // Hamcrest library
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
-
-    //kotlinx-coroutines-test
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.8'
+    androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.12.1'
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0"
+
+    // debugImplementation required vs testImplementation: https://issuetracker.google.com/issues/128612536
+    debugImplementation("androidx.fragment:fragment-testing:1.2.5") {
+        exclude group:'androidx.test', module:'monitor'
+    }
 }
