--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,8 +103,8 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
 
     //Coroutines
-    def version_kotlin_coroutines = "1.3.7"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
+    def version_kotlin_coroutines = "1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
 
     //Glide
